Updates to all working files
index.html, as-am.html, bible-study.html, geo.html, contact.html:
updated navigation links;
bible-study.html: updated content;
mixture.json: updated parameters;
config.rb: updated parameters;
new favicons for subfolders;

--- a/notes/as-am.html
+++ b/notes/as-am.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <title>Asian American Studies Lecture Notes | Marvin Alcantara</title>
+    <title>Asian American Studies 3 - ELAC | Maralkan</title>
     
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@
     <header class="header">
         <div class="container">
             <h1 class="site-title">Asian-American Studies</h1>
-            <span class="site-tagline">East Los Angeles College</span>
+            <span class="site-tagline">East Los Angeles College | Spring 2015</span>
         </div>
     </header>
     <nav class="main-nav">
@@ -30,20 +30,20 @@
             <ul>
                 <li class="mobile-button"><a href="#">Menu</a></li>
                 <li><a href="/">About</a></li>
-                <li><a href="/notes/index.html">Works</a></li>
+                <li><a href="/notes/">Notes</a></li>
                 <ul>
-                    <li><a href="/notes/meteor.html">Meteorology</a></li>
+                    <li><a href="/notes/meteor">Meteorology</a></li>
                     <li><a href="#top">As - Am Studies</a></li>
-                    <li><a href="/notes/geo.html">Geography</a></li>
-                    <li><a href="/notes/bible-study.html">Bible Studies</a></li>
+                    <li><a href="/notes/geo">Geography</a></li>
+                    <li><a href="/notes/bible-study">Bible Studies</a></li>
                 </ul>
-                <li><a href="/works/index.html">Works</a></li>
+                <li><a href="/works/">Works</a></li>
                 <ul>
-                    <li><a href="/works/artist-theme.html">Artist's Theme</a></li>
-                    <li><a href="/works/fixnav.html">Fixed Nav Bar</a></li>
-                    <li><a href="/works/video-theme.html">Video Theme</a></li>
+                    <li><a href="/works/artist-theme">Artist's Theme</a></li>
+                    <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
+                    <li><a href="/works/video-theme">Video Theme</a></li>
                 </ul>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
     </nav>
