--- a/notes/meteor.html
+++ b/notes/meteor.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-        <link type="text/css" rel="stylesheet" href="css/normalize.css">
+        <title>Meteorology 3 - ELAC | Maralkan</title>
+        <link type="text/css" rel="stylesheet" href="/css/stylesheet.css">
+        <link type="text/css" rel="stylesheet" href="/css/normalize.css">
     </head>
     <body>
         <div id="header">
@@ -293,7 +293,7 @@
                     <img src="http://static.tumblr.com/8a38f6bb94cf2d839a557f6bc8872f95/hzmt1ks/Um2n1p5x4/tumblr_static_angels-stairs.jpg" width="448.4" height="300">
                 </ul>
                 <li>Absorption and atmospheric gases</li>
-                <li>Dry adiabaic lapse rate</li>
+                <li>Dry adiabatic lapse rate</li>
                 <ul>
                     <li>Rate of cooling, 5.5 degs per 1000 ft</li>
                     <li>No condensation takes place</li>
@@ -301,7 +301,7 @@
                 <li>Heterosphere, Homosphere</li>
                 <li>Auroras</li>
                 <ul>
-                    <li>northern, borealis</li>
+                    <li>Northern, Borealis</li>
                     <li>ionosphere</li>
                 </ul>
                 <li>Diurnal chantes, causes</li>
