--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="#top">About</a></li>
-                    <li><a href="/notes/index.html">Works</a></li>
+                    <li><a href="/notes/">Works</a></li>
                     <ul>
-                        <li><a href="/notes/meteor.html">Meteorology</a></li>
-                        <li><a href="/notes/as-am.html">As - Am Studies</a></li>
-                        <li><a href="/notes/geo.html">Geography</a></li>
-                        <li><a href="/notes/bible-study.html">Bible Studies</a></li>
+                        <li><a href="/notes/meteor">Meteorology</a></li>
+                        <li><a href="/notes/as-am">As - Am Studies</a></li>
+                        <li><a href="/notes/geo">Geography</a></li>
+                        <li><a href="/notes/bible-study">Bible Studies</a></li>
                     </ul>
-                    <li><a href="/works/index.html">Works</a></li>
+                    <li><a href="/works/">Works</a></li>
                     <ul>
-                        <li><a href="/works/artist-theme.html">Artist's Theme</a></li>
-                        <li><a href="/works/fixnav.html">Fixed Nav Bar</a></li>
-                        <li><a href="/works/video-theme.html">Video Theme</a></li>
+                        <li><a href="/works/artist-theme">Artist's Theme</a></li>
+                        <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
+                        <li><a href="/works/video-theme">Video Theme</a></li>
                     </ul>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
