--- a/notes/geog.html
+++ b/notes/geog.html
@@ -2,8 +2,8 @@
 <html>
      <head>
         <title> Geography 1 - East Los Angeles College</title>
-        <link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-        <link type="text/css" rel="stylesheet" href="css/normalize.css"
+        <link type="text/css" rel="stylesheet" href="/css/stylesheet.css">
+        <link type="text/css" rel="stylesheet" href="/css/normalize.css"
     </head>
     <body>
         <div id="header">
