Updates to content
Addition of PowerPoint iframe;
as-am.html now follows new lecture style;
contact.html has new textarea;
renamed bible-study.html to bible-studies.html;
updated content for geo.html;
bower initiated;

--- a/contact.html
+++ b/contact.html
@@ -52,14 +52,17 @@
                 <h3>Get in touch with me!</h3>
                 <div class="columns">
                     <div class="item">
-                        <h4 class="item-title">Please fill out your name and email and include a reason for contact.</h4>
+                        <h4 class="item-title">Contact Form</h4>
                         <form action="//formspree.io/marveen1520@gmail.com" method="post">
                             <p>Name</p>
                             <p><input type="text" name="name" placeholder="Maralkan"></p>
                             <p>Email</p>
                             <p><input type="email" name="_replyto" placeholder="your@email.com"></p>
                             <p>Subject</p>
-                            <p><input type="text" name="_subject" placeholder="Schedule Bible Study"></p>
+                            <p><input type="text" name="_subject" placeholder='"Schedule Bible Study"'></p>
+                            <p>Message</p>
+                            <p><textarea name="message" placeholder="Your message" rows="5"></textarea></p>
+                            <input type="hidden" name="_next" value=""
                             <input type="submit" value="Send">
                         </form>
                     </div>
