--- a/notes/bible-studies.html
+++ b/notes/bible-studies.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="#top">About</a></li>
+                    <li><a href="/">About</a></li>
                     <li><a href="/notes/">Notes</a></li>
                     <ul>
                         <li><a href="/notes/meteor">Meteorology</a></li>
