Updates to links and added asian font support
das it!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="/notes/meteor">Meteorology</a></li>
                         <li><a href="/notes/as-am">As - Am Studies</a></li>
                         <li><a href="/notes/geo">Geography</a></li>
-                        <li><a href="/notes/bible-study">Bible Studies</a></li>
+                        <li><a href="/notes/bible-studies">Bible Studies</a></li>
                     </ul>
                     <li><a href="/works/">Works</a></li>
                     <ul>
@@ -59,17 +59,19 @@
                     
                     <div class="item">
                         <h4 class="item-title">Religious Views</h4>
-                        <p>I am a Christian. But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail. I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
+                        <p>I am a Christian. But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
+                        <p>I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
                     </div>
                     
                     <div class="item">
                         <h4 class="item-title">Hobbies</h4>
                         <p>I have a lot of time on my hands now that I am at ELAC. Here's what I like to do:</p>
                         <ul>
-                            <li>Berean Challenge: Read one chapter of the Bible every day</li>
-                            <li>Website Prototyping: I like to test out website designs and implement them into my own webpages</li>
-                            <li>Fellowship: I love to hang out with friends from my church but I'm not exclusive and I'm always up for a good chat about the case for Christianity or for studying</li>
-                            <li>Chinese: <span class="asian">&#25105;&#35828;&#20013;&#25991;</span> I like to learn Chinese</li>
+                            <li>Berean Challenge: Read one chapter of the Bible every day. Current book: Romans.</li>
+                            <li>Website Prototyping: I like to test out website designs and implement them into my own webpages.</li>
+                            <li>Fellowship: I love to hang out with friends from my church but I'm not exclusive and I love making new friends.</li>
+                            <li>Learn Chinese: <span class="asian">&#25105;&#35828;&#20013;&#25991;</span> I'm not fluent yet but I'd like to be.</li>
+                            <li>Japanese: <span class="asian">&#26085;&#26412;&#35486;&#12364;&#19968;&#30058;&#22909;&#12365;&#12391;&#12377;&#12290;</span> I like to learn Japanese and listen to meaningful J-Pop. Favorite J-Pop: SEKAI NO OWARI: <span class="asian">&#34425;&#33394;&#12398;&#25126;&#20105;</span> and <span class="asian">&#12473;&#12479;&#12540;&#12521;&#12488;&#12497;&#12524;&#12540;&#12489;</span></li>
                         </ul>
                     </div>
                 </div>
@@ -79,7 +81,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara</a></p>
+        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara. Last updated March 13, 2015.</a></p>
     </div>
 </footer>
 
