--- a/works/artist-theme.html
+++ b/works/artist-theme.html
@@ -22,9 +22,9 @@
     <section class="big-background">
         <nav>
             <ul>
-                <li><a href="/index.html">About Me</a></li>
-                <li><a href="/works/index.html">Works</a></li>
-                <li><a href="/resume.html">Resume</a></li>
+                <li><a href="/">About Me</a></li>
+                <li><a href="/works/">Works</a></li>
+                <li><a href="/resume">Resume</a></li>
             </ul>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=qL7LvWE1Adk&hd=1',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
@@ -33,15 +33,15 @@
             <h1 class="big-background-title">Artists Theme</h1>
             <div class="divider"></div>
             <h1 id="colorize">Designer // Thinker // Blogger</h1>
-            <a href="index_static.html" class="big-background-btn">View Photographer's Theme</a>
+            <a href="/" class="big-background-btn" target="_blank">Main Site</a>
         </div>
     </section>
     <div class="wrapper">
     	<section class="about-section">
             <div class="about-section-container">
                 <h2 class="about-section-title">About Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
-                <a href="works.html" target="_blank" class="about-section-btn">Check out my works</a>
+                <p>[ Placeholder paragraph ]Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
+                <a href="/works/" target="_blank" class="about-section-btn">Check out my works</a>
             </div>
         </section>
         <section class="small-background-section">
@@ -49,7 +49,7 @@
             <div class="small-background-container">
             	<h2 class="small-background-title"><span>See videographer's theme I've been working on</span></h2>
                 <p></p>
-                <a href="/works/video-theme.html" class="big-background-btn">Check it here</a>
+                <a href="/works/video-theme" class="big-background-btn">Check it here</a>
             </div>
         </section>
     </div>
