--- a/works/video-theme.html
+++ b/works/video-theme.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 
-    <link rel="stylesheet" href="css/normalize.css" media="all">
-    <link rel="stylesheet" href="css/v_style.css" media="all">
+    <link rel="stylesheet" href="/css/normalize.css" media="all">
+    <link rel="stylesheet" href="/css/v_style.css" media="all">
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
-    <script src="js/jquery.mb.YTPlayer.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/js/jquery-1.11.1.min.js"></script>
+    <script src="/js/device.min.js"></script> <!--OPTIONAL JQUERY PLUGIN-->
+    <script src="/js/jquery.mb.YTPlayer.js"></script>
+    <script src="/js/custom.js"></script>
     
     <meta name="robots" content="noindex,follow" />
 </head>
@@ -35,7 +35,7 @@
             <h1 class="big-background-title">Video Theme</h1>
             <div class="divider"></div>
             <h1 id="colorize">Designer // Thinker</h1>
-<!--            <a href="index_static.html" class="big-background-btn">See my blog</a>-->
+            <a href="/" class="big-background-btn">Main Site</a>
         </div>
     </section>
     <div class="wrapper">
@@ -43,7 +43,7 @@
             <div class="about-section-container">
                 <h2 class="about-section-title">About Me</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
-                <a href="http://ugis.ls.berkeley.edu/cogsci/index.php" target="_blank" class="about-section-btn">Check it here</a>
+                <a href="/works/" target="_blank" class="about-section-btn">See my other works</a>
             </div>
         </section>
         <section class="small-background-section"><a name="work"></a>
