Corrections and some additions
Corrected footer text for index.html, as-am.html, bible-studies.html,
geo.html;
Added verses to bible-studies.html (need to add more);

--- a/notes/geo.html
+++ b/notes/geo.html
@@ -336,7 +336,8 @@
         <div class="container">
             <h3>Side notes and Other Relevant Images</h3>
             <div class="columns thirds">
-                <div class="item"> <h4 class="item-title">Thanksgiving, Pilgrims + Image - Thurs, 3/5/2015</h4>
+                <div class="item">
+                    <h4 class="item-title"><a id="#thxgiv-note">Thanksgiving, Pilgrims + Image - Thurs, 3/5/2015</a></h4>
                     <img src="http://lorempixel.com/400/100/nature" alt="Sample Image" class="item-image" />
                     <p>These people weren't the best people to be neighbors with... because they were really nosy and they weren't pleasant people. They came to America. So they said, as long as we gotta go, we'll go somewhere pleasant. So they wanted weather like that of southern Spain and France. So they brought their summer clothes and crops that would grow in a Mediterranean climate. So they went straight to Massachusetts. They lost a lot of people because of this bad judgment.</p>
                     <div class="social">
@@ -400,12 +401,12 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara</a>. Last updated March 13, 2015.</p>
+        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 14, 2015.</p>
     </div>
 </footer>
 
 <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-<script src="js/index.js"></script>
+<script src="/js/index.js"></script>
 
 </body>
 
