--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="#top">About</a></li>
-                    <li><a href="/notes/">Works</a></li>
+                    <li><a href="/notes/">Notes</a></li>
                     <ul>
                         <li><a href="/notes/meteor">Meteorology</a></li>
                         <li><a href="/notes/as-am">As - Am Studies</a></li>
@@ -55,6 +55,13 @@
                         <h4 class="item-title">School</h4>
                         <p>I am a student at UC Berkeley. I am majoring in Cognitive Science.</p>
                         <p>I am currently taking time off to de-stress and to rekindle my relationship with my family. So I'm attending East Los Angeles College while I am at home.</p>
+                        <p>Current coursework:</p>
+                        <ul>
+                            <li>Asian American Studies 3: Peoples and Cultures of Asia</li>
+                            <li>Chinese 2: Intermediate Chinese</li>
+                            <li>Geography 1: Physical Geography</li>
+                            <li>Meteorology 3: Introduction to Meteorology</li>
+                        </ul>
                     </div>
                     
                     <div class="item">
@@ -81,7 +88,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara. Last updated March 13, 2015.</a></p>
+        <p>&copy 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 14, 2015.</p>
     </div>
 </footer>
 
