Updates to content and updated menu
Changed menu to be lists within lists;
Removed passages and instead provided links from bible-studies.html;

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="#top">About</a></li>
-                    <li><a href="/notes/">Notes</a></li>
-                    <ul>
-                        <li><a href="/notes/meteor">Meteorology</a></li>
-                        <li><a href="/notes/as-am">As - Am Studies</a></li>
-                        <li><a href="/notes/geo">Geography</a></li>
-                        <li><a href="/notes/bible-studies">Bible Studies</a></li>
-                    </ul>
-                    <li><a href="/works/">Works</a></li>
-                    <ul>
-                        <li><a href="/works/artist-theme">Artist's Theme</a></li>
-                        <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
-                        <li><a href="/works/video-theme">Video Theme</a></li>
-                    </ul>
+                    <li><a href="/notes/">Notes</a>
+                        <ul>
+                            <li><a href="/notes/meteor">Meteorology</a></li>
+                            <li><a href="/notes/as-am">As - Am Studies</a></li>
+                            <li><a href="/notes/geo">Geography</a></li>
+                            <li><a href="/notes/bible-studies">Bible Studies</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/works/">Works</a>
+                        <ul>
+                            <li><a href="/works/artist-theme">Artist's Theme</a></li>
+                            <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
+                            <li><a href="/works/video-theme">Video Theme</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
