style.css and contact now reflects univ design
Style now has border-radius added;
contact.html reflects updated navigation;
contact.html has new form attributes to discourage bots;

--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,21 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="/">About</a></li>
-                    <li><a href="notes/">Works</a></li>
-                    <ul>
-                        <li><a href="notes/meteor">Meteorology</a></li>
-                        <li><a href="notes/as-am">As - Am Studies</a></li>
-                        <li><a href="notes/geo">Geography</a></li>
-                        <li><a href="notes/bible-study">Bible Studies</a></li>
-                    </ul>
-                    <li><a href="works/">Works</a></li>
-                    <ul>
-                        <li><a href="works/artist-theme">Artist's Theme</a></li>
-                        <li><a href="works/fixnav">Fixed Nav Bar</a></li>
-                        <li><a href="works/video-theme">Video Theme</a></li>
-                    </ul>
+                    <li><a href="notes/">Notes</a>
+                        <ul>
+                            <li><a href="notes/meteor">Meteorology</a></li>
+                            <li><a href="notes/as-am">As - Am Studies</a></li>
+                            <li><a href="notes/geo">Geography</a></li>
+                            <li><a href="notes/bible-studies">Bible Studies</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="works/">Works</a>
+                        <ul>
+                            <li><a href="works/artist-theme">Artist's Theme</a></li>
+                            <li><a href="works/fixnav">Fixed Nav Bar</a></li>
+                            <li><a href="works/video-theme">Video Theme</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#top">Contact</a></li>
                 </ul>
             </div>
@@ -62,7 +64,8 @@
                             <p><input type="text" name="_subject" placeholder='"Schedule Bible Study"'></p>
                             <p>Message</p>
                             <p><textarea name="message" placeholder="Your message" rows="5"></textarea></p>
-                            <input type="hidden" name="_next" value=""
+                            <input type="hidden" name="_gotcha">
+                            <input type="hidden" name="_next" value="//maralkan.github.io/thanks">
                             <input type="submit" value="Send">
                         </form>
                     </div>
@@ -73,7 +76,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy 2015 Made with love by <a href="http://maralkan.github.io/">Marvin Alcantara</a></p>
+        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara</a>. Last updated March 14, 2015.</p>
     </div>
 </footer>
 
