--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="header">
 	   		<p id="name"><a href="/">Marvin Alcantara</a></p>
-	   		<a href="mailto:maralcan2@gmail.com"><p id="email">maralcan2@gmail.com</p></a>
+	   		<a href="contact"><p id="email">Contact Me</p></a>
 		</div>
 		<div id="container">
 		<div class="left"></div>
