--- a/works/artist-theme.html
+++ b/works/artist-theme.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=qL7LvWE1Adk&hd=1',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
-        <div class="pattern"></div>
+        <!-- <div class="pattern"></div> -->
         <div class="big-background-container">
             <h1 class="big-background-title">Artists Theme</h1>
             <div class="divider"></div>
@@ -40,7 +40,7 @@
     	<section class="about-section">
             <div class="about-section-container">
                 <h2 class="about-section-title">About Me</h2>
-                <p>[ Placeholder paragraph ]Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
+                <p>[ Placeholder paragraph ] Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisl nunc, tincidunt vitae nunc id, tempor vulputate orci. Morbi non orci posuere, scelerisque nisi ut, egestas urna. Aenean felis lacus, cursus luctus auctor ut, ornare ut leo. Nullam sit amet nisl rutrum, elementum nisi eu, blandit orci. Nulla facilisi. Vivamus interdum facilisis urna, placerat mollis mi aliquet non. Fusce pellentesque nec libero at congue. Etiam vitae aliquet dolor, non pretium nisl.</p>
                 <a href="/works/" target="_blank" class="about-section-btn">Check out my works</a>
             </div>
         </section>
