--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <h2>Get in touch with me!</h2>
                 <div class="columns">
-                    <div class="item">
+                    <div class="item" style="width:100%;">
                         <form action="//formspree.io/marveen1520@gmail.com" method="post">
                             <label class="contact">Name <input type="text" name="name" placeholder="Maralkan" class="input"></label>
                             
