Content Updates and flex put into all things!
Addition of additional notes (chn.html);
Complete removal of stylesheet.css;
Resume restylized;
All links in bible-studies.html finalized;

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                     <li><a href="#top">About</a></li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
-                            <li><a href="/notes/meteor">Meteorology</a></li>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
-                            <li><a href="/notes/geo">Geography</a></li>
                             <li><a href="/notes/bible-studies">Bible Studies</a></li>
+                            <li><a href="/notes/chn2">Chinese</a></li>
+                            <li><a href="/notes/geo">Geography</a></li>
+                            <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
                     </li>
                     <li><a href="/works/">Works</a>
@@ -93,7 +94,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 14, 2015.</p>
+        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 17, 2015.</p>
     </div>
 </footer>
 
