--- a/notes/geo.html
+++ b/notes/geo.html
@@ -33,10 +33,11 @@
             <li><a href="/">About</a></li>
             <li><a href="/notes/">Notes</a>
                 <ul>
-                    <li><a href="/notes/meteor">Meteorology</a></li>
                     <li><a href="/notes/as-am">As - Am Studies</a></li>
-                    <li><a href="#top">Geography</a></li>
                     <li><a href="/notes/bible-studies">Bible Studies</a></li>
+                    <li><a href="/notes/chn2">Chinese</a></li>
+                    <li><a href="#top">Geography</a></li>
+                    <li><a href="/notes/meteor">Meteorology</a></li>
                 </ul>
             </li>
             <li><a href="/works/">Works</a>
