--- a/works/index.html
+++ b/works/index.html
@@ -63,12 +63,14 @@
                     <div class="item">
                         <h4 class="item-title">Artist's Theme</h4>
                         <a href="artist-theme"><img src="../images/sunset.jpg" width="100%" alt="Screenshot of Artist's Theme"/></a>
+                        <p>Under Construction (Most recent version here)</p>
                         <p>This theme is for artists who want to showcase their work and have their site look very professional.</p>
                     </div>
                     
                     <div class="item">
                         <h4 class="item-title">Videographer's Theme</h4>
                         <a href="video-theme"><img src="../images/sunset.jpg" width="100%" alt="Screenshot of Video Theme" /></a>
+                        <p>Under Construction (Most recent version here)</p>
                         <p>This theme is intended for people who use a camera a lot and do photography and or videography. This theme is intended to have a video background showcasing videos that the videographer owns.</p>
                     </div>
                     
