--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Marvin Alcantara</title>
+        <meta name="author" content="Marvin Alcantara">
+        <meta name="keywords" content="Marvin Alcantara, hireable college student, web designer, html coder, css coder, html css coder, flex coder, UC Berkeley, hireable, html, css, flex, photgrapher website, video website">
         
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -28,7 +30,11 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="#top">About</a></li>
+                    <li><a href="/">About Me</a>
+                        <ul>
+                            <li><a href="/resume">R&eacute;sum&eacute;</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
