--- a/works/index.html
+++ b/works/index.html
@@ -36,10 +36,11 @@
                     </li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
-                            <li><a href="/notes/meteor">Meteorology</a></li>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
-                            <li><a href="/notes/geo">Geography</a></li>
                             <li><a href="/notes/bible-studies">Bible Studies</a></li>
+                            <li><a href="/notes/chn">Chinese</a></li>
+                            <li><a href="/notes/geo">Geography</a></li>
+                            <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
                     </li>
                     <li><a href="#top">Works</a>
