--- a/works/video-theme.html
+++ b/works/video-theme.html
@@ -24,13 +24,12 @@
     <section class="big-background">
         <nav>
             <ul>
-                <li><a href="/index.html">About Me</a></li>
-                <li><a href="/works/index.html">Work</a></li>
-                <li><a href="/resume.html">Resume</a></li>
+                <li><a href="/">About Me</a></li>
+                <li><a href="/works/">Work</a></li>
+                <li><a href="/resume">Resume</a></li>
             </ul>
         </nav>
-        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=qL7LvWE1Adk',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
-        <div class="pattern"></div>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aFK6YfnZlyE',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
         <div class="big-background-container">
             <h1 class="big-background-title">Video Theme</h1>
             <div class="divider"></div>
@@ -47,7 +46,6 @@
             </div>
         </section>
         <section class="small-background-section"><a name="work"></a>
-            <div class='pattern'></div>
             <div class="small-background-container">
             	<h2 class="small-background-title"><span>See other themes I've been working on</span></h2>
                 <p/>
