--- a/notes/bible-studies.html
+++ b/notes/bible-studies.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Bible Studies | Maralkan</title>
+        <meta name="author" content="Marvin Alcantara">
+        <meta name="keywords" content="bible study, bible studies, bible, bible talks, Mind Above, ELAC, East Los Angeles College">
+        <meta name="description" content="This page serves to host notes taken from or at bible studies given by Mind Above at East Los Angeles College. Feel free to take a look.">
         
         <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -26,7 +29,11 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/">About</a></li>
+                    <li><a href="/">About Me</a>
+                        <ul>
+                            <li><a href="/resume">R&eacute;sum&eacute;</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
