--- a/notes/meteor.html
+++ b/notes/meteor.html
@@ -27,7 +27,11 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/">About</a></li>
+                    <li><a href="/">About Me</a>
+                        <ul>
+                            <li><a href="/resume">R&eacute;sum&eacute;</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
