Updates to content and addition of gadget
Saint-Andrews Queen to be title font (test);
added Chinese stroke order gadget;
updates to notes content;
updated link listing for all pages;

--- a/notes/bible-studies.html
+++ b/notes/bible-studies.html
@@ -34,11 +34,11 @@
                             <li><a href="/resume">R&eacute;sum&eacute;</a></li>
                         </ul>
                     </li>
-                    <li><a href="/notes/">Notes</a>
+                    <li><a href="#">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
                             <li><a href="#top">Bible Studies</a></li>
-                            <li><a href="/notes/chn2">Chinese</a></li>
+                            <li><a href="/notes/chn">Chinese</a></li>
                             <li><a href="/notes/geo">Geography</a></li>
                             <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
@@ -62,6 +62,7 @@
             <div class="columns thirds">
                 <div class="item">
                     <h4 class="item-title">Verse 1</h4>
+                    <p><a href="https://www.biblegateway.com/passage/?search=&version=ESV" target="_blank">See verse</a></p>
                     <p>Content</p>
                 </div>
             </div>
