--- a/notes/meteor.html
+++ b/notes/meteor.html
@@ -36,7 +36,7 @@
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
                             <li><a href="/notes/bible-studies">Bible Studies</a></li>
-                            <li><a href="/notes/chn2">Chinese</a></li>
+                            <li><a href="/notes/chn">Chinese</a></li>
                             <li><a href="/notes/geo">Geography</a></li>
                             <li><a href="#top">Meteorology</a></li>
                         </ul>
