--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                             <li><a href="/resume">R&eacute;sum&eacute;</a></li>
                         </ul>
                     </li>
-                    <li><a href="/notes/">Notes</a>
+                    <li><a href="#">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
                             <li><a href="/notes/bible-studies">Bible Studies</a></li>
-                            <li><a href="/notes/chn2">Chinese</a></li>
+                            <li><a href="/notes/chn">Chinese</a></li>
                             <li><a href="/notes/geo">Geography</a></li>
                             <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
@@ -76,7 +76,7 @@
                     </div>
                     
                     <div class="item">
-                        <h4 class="item-title">Religious Views</h4>
+                        <h4 class="item-title">Religious Convictions</h4>
                         <p>I am a Christian. But I do not follow blindly what scriptures say. I scrutinize them and pay close attention to detail.</p>
                         <p>I decided to become a Christian after careful consideration of evidences for Christianity and decided that since there is no evidence that refutes Christianity or the existence of God, I only have to believe one or the other. I chose to believe what the biblical scriptures say because I believe that they are an accurate picture of how I need to live my life and how I must relate to God at a very personal level.</p>
                         <p>I believe that, in order to become a Christian, one must first be a disciple of Christ, repenting of sins and dedicating to live God's way. Then, after becoming a disciple, this person must then be baptized in truth and spirit, in the name of the Father, of the Son, and of the Holy Spirit. This Christian must then go and make disciples of all other nations.</p>
@@ -100,7 +100,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 17, 2015.</p>
+        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 20, 2015.</p>
     </div>
 </footer>
 
