Updates to content;
fixed typo in geo.html;
[test] update to chn.html;
contact.html now sports a full cover photo;
unused files deleted;

--- a/notes/geo.html
+++ b/notes/geo.html
@@ -219,7 +219,7 @@
                 </div>
                 
                 <div class="item">
-                    <h4 class="item-title">El Ni&ntilde;;o / La Ni&ntilde;a - Southern Oscillation</h4>
+                    <h4 class="item-title">El Ni&ntilde;o / La Ni&ntilde;a - Southern Oscillation</h4>
                     <p>This is the warming of waters in the eastern equatorial Pacific Ocean. It is associated with numerous changes in weather patterns worldwide. It typically occurs on time scales of 3 to 7 years for about 18 months.</p>
                     <p><em>While trying to figure out whether or not to drain some dams in trying to predict rainy seasons, the professor stumbled upon this problem, later labeled as El Ni&ntilde;o</em></p>
                     <p>La Ni&ntilde;a is the opposite of El Ni&ntilde;o</p>
@@ -449,7 +449,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 20, 2015.</p>
+        <p>&copy; 2015 Made with love by <a href="/">Marvin Alc&aacute;ntara</a>. Last updated March 21, 2015.</p>
     </div>
 </footer>
 
