--- a/notes/chn.html
+++ b/notes/chn.html
@@ -19,8 +19,7 @@
     <script src="/js/modernizr.js"></script>
     
     <script language="javascript">
-        function animate(wc)
-        {
+        function animate(wc) {
             var o = document.getElementById('requestor');
             o.src ="http://www.eon.com.hk/common/fcg/estroke.fcg?task=getUserPhrase&phrase="+wc;
         }
@@ -74,13 +73,11 @@
                     
                     <div class="item">
                         <h4 class="item-title">Practice Writing / <span class="asian">练习写汉字/練習寫漢字</span></h4>
-                        <p>This item is currently under construction. I am working to provide a gadget that shows Chinese character stroke order to improve everyone's writing skills and speed. It also enables the user to focus on the use of radicals and their importance in Chinese linguistics.</p>
-                        <p>Click on the following Chinese Characters to animate</p>
-                        <a href="Javascript:animate('0x6F220x8A9E')"><span class="asian">&#28450;&#35486;</span></a>
-                        <a href="Javascript:animate('0x4F600x5F970x7DF40x7FD20x5BEB0x6F220x8A9E')"><span class="asian">&#20320;&#24471;&#32244;&#32722;&#23531;&#28450;&#35486;</span></a>
+                        <p>This gadget shows Chinese character stroke order to improve everyone's writing skills and speed. It also enables you to focus on the use of radicals and to learn their importance in Chinese linguistics.</p>
                         <p>
-                            <IFRAME name=demo id=demo WIDTH=199 HEIGHT=250 scrolling=no frameborder=0 SRC="anim.html"></IFRAME>
+                            <iframe name="estroke" width="350" height="356" src="https://www.eon.com.hk/common/fcg/estroke.fcg?task=getPage&amp;&amp;page=demo/template2.html&amp;&amp;bgcolor=ffffff&amp;&amp;bias=Simplified&amp;&amp;plan=Star&amp;&amp;transientColor=ff0000&amp;&amp;strokeColor=000000&amp;&amp;radicalColor=0000ff&amp;&amp;planColor=00ff00&amp;&amp;appsize=200&amp;noinput=false" frameborder="0" scrolling="no" style="font-family:'KaiTi';"></iframe>
                         </p>
+                        <p>This gadget courtesy of <a href="//www.eon.com.hk/">Eon Media, Ltd.</a></p>
                     </div>
                 </div>
             </div>
