Updates to content and menu
New notes added to as-am.html;
Changed video for video-theme.html;
Resume listed in main menu for all pages;

--- a/resume.html
+++ b/resume.html
@@ -27,11 +27,7 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/">About Me</a>
-                        <ul>
-                            <li><a href="#top">R&eacute;sum&eacute;</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="/">About Me</a></li>
                     <li><a href="#">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
@@ -48,6 +44,7 @@
                             <li><a href="/works/video-theme">Video Theme</a></li>
                         </ul>
                     </li>
+                    <li><a href="#top">R&eacute;sum&eacute;</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
