--- a/works/video-theme.html
+++ b/works/video-theme.html
@@ -18,10 +18,11 @@
     <script src="/js/jquery.mb.YTPlayer.js"></script>
     <script src="/js/custom.js"></script>
     
-    <meta name="robots" content="noindex,follow" />
+    <meta name="robots" content="INDEX, NOFOLLOW" />
 </head>
 <body>
     <section class="big-background">
+        <div class='pattern'></div>
         <nav>
             <ul>
                 <li><a href="/">About Me</a></li>
@@ -29,11 +30,11 @@
                 <li><a href="/resume">Resume</a></li>
             </ul>
         </nav>
-        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aFK6YfnZlyE',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Ii7pumqR1kY',containment:'body',autoPlay:true, mute:true, startAt:23, stopAt:97, opacity:1, quality:'hd1080'}"></a>
         <div class="big-background-container">
-            <h1 class="big-background-title">Video Theme</h1>
+            <h1 class="big-background-title">David Valdez</h1>
             <div class="divider"></div>
-            <h1 id="colorize">Designer // Thinker</h1>
+            <h1 id="colorize">Video // Photo</h1>
             <a href="/" class="big-background-btn">Main Site</a>
         </div>
     </section>
@@ -46,6 +47,7 @@
             </div>
         </section>
         <section class="small-background-section"><a name="work"></a>
+            <div class='pattern'></div>
             <div class="small-background-container">
             	<h2 class="small-background-title"><span>See other themes I've been working on</span></h2>
                 <p/>
