--- a/contact.html
+++ b/contact.html
@@ -28,22 +28,23 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="/">About</a></li>
-                    <li><a href="notes/">Notes</a>
+                    <li><a href="/notes/">Notes</a>
                         <ul>
-                            <li><a href="notes/as-am">As - Am Studies</a></li>
-                            <li><a href="notes/bible-studies">Bible Studies</a></li>
+                            <li><a href="/notes/as-am">As - Am Studies</a></li>
+                            <li><a href="/notes/bible-studies">Bible Studies</a></li>
                             <li><a href="/notes/chn2">Chinese</a></li>
-                            <li><a href="notes/geo">Geography</a></li>
-                            <li><a href="notes/meteor">Meteorology</a></li>
+                            <li><a href="/notes/geo">Geography</a></li>
+                            <li><a href="/notes/meteor">Meteorology</a></li>
                         </ul>
                     </li>
-                    <li><a href="works/">Works</a>
+                    <li><a href="#">Works</a>
                         <ul>
                             <li><a href="works/artist-theme">Artist's Theme</a></li>
                             <li><a href="works/fixnav">Fixed Nav Bar</a></li>
                             <li><a href="works/video-theme">Video Theme</a></li>
                         </ul>
                     </li>
+                    <li><a href="/resume">R&eacute;sum&eacute;</a></li>
                     <li><a href="#top">Contact</a></li>
                 </ul>
             </div>
