--- a/notes/meteor.html
+++ b/notes/meteor.html
@@ -27,11 +27,7 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/">About Me</a>
-                        <ul>
-                            <li><a href="/resume">R&eacute;sum&eacute;</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="/">About Me</a></li>
                     <li><a href="/notes/">Notes</a>
                         <ul>
                             <li><a href="/notes/as-am">As - Am Studies</a></li>
@@ -41,13 +37,14 @@
                             <li><a href="#top">Meteorology</a></li>
                         </ul>
                     </li>
-                    <li><a href="/works/">Works</a>
+                    <li><a href="$">Works</a>
                         <ul>
                             <li><a href="/works/artist-theme">Artist's Theme</a></li>
                             <li><a href="/works/fixnav">Fixed Nav Bar</a></li>
                             <li><a href="/works/video-theme">Video Theme</a></li>
                         </ul>
                     </li>
+                    <li><a href="/resume">R&eacute;sum&eacute;</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
