added Animated Music Player;
Updates to content;
Added new readme.md file;
Changes to artist and video themes;
Added new comparison passages to bible study notes;

--- a/works/artist-theme.html
+++ b/works/artist-theme.html
@@ -28,12 +28,12 @@
                 <li><a href="/resume">Resume</a></li>
             </ul>
         </nav>
-        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=qL7LvWE1Adk&hd=1',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}"></a>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=PN_CP4SuoTU',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1, quality:'hd1080'}"></a>
         <!-- <div class="pattern"></div> -->
         <div class="big-background-container">
             <h1 class="big-background-title">Jane Smith</h1>
             <div class="divider"></div>
-            <h1 id="colorize">Comics // Design // Graphics</h1>
+            <h1 id="colorize">Comics // Design // Animation</h1>
             <a href="/" class="big-background-btn" target="_blank">Main Site</a>
         </div>
     </section>
