--- a/works/video-theme.html
+++ b/works/video-theme.html
@@ -30,7 +30,7 @@
                 <li><a href="/resume">Resume</a></li>
             </ul>
         </nav>
-        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=Ii7pumqR1kY',containment:'body',autoPlay:true, mute:true, startAt:23, stopAt:97, opacity:1, quality:'hd1080'}"></a>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=aFK6YfnZlyE',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1, quality:'hd1080'}"></a>
         <div class="big-background-container">
             <h1 class="big-background-title">David Valdez</h1>
             <div class="divider"></div>
